# starsurge

./: Cargo.toml
assets/maps/: test_map.map.ron  test_map.scn.ron  test_map2.map.ron  test_map2.scn.ron
src/: ai.rs  bevy_config.rs  input.rs  lib.rs  map.rs  map_registry.rs  movement.rs  spawner.rs  terrain.rs
src/client/: camera.rs  main.rs
src/client/dev/: commands.rs  mod.rs
