[package]
name = "starsurge"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
dev = []

[dependencies]
bevy = "0.10.0"
bevy_common_assets = { version="0.6.0", features=["ron"] }
bevy_console = "0.7.0"
bevy_egui = "0.20.1"
bevy_mod_raycast = "0.8.0"
clap = "4.1.10"
serde = "1.0.158"

[[bin]]
name = "client"
path = "src/client/main.rs"
